[package]
name = "my-portfolio-app"
version = "0.1.0"
edition = "2021"

[dependencies]
select = "0.6.0"
gloo-console = "0.3.0"
wasm-bindgen = "0.2.91"
futures = "0.3.30"
async-std = "1.10.0"
include_dir = "0.7.3"
glob = "0.3.1"
reqwest = { version = "0.11", features = ["json"] }
yew = { git = "https://github.com/yewstack/yew/", features = ["csr"] }
yew-router = { git = "https://github.com/yewstack/yew.git" }
